--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ p { text-align: justify }
 <footer class="w3-container w3-teal w3-center w3-margin-top"><br>
   <a href="https://www.facebook.com/Lucasalves007/" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
   <a href="https://www.instagram.com/lkalvex/" target="_blank"><i class="fa fa-instagram w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
-  <a href="https://twitter.com/LKalvex_DEV" target="_blank"><i class="fa fa-twitter w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
+  <a href="https://twitter.com/LucasDevJR" target="_blank"><i class="fa fa-twitter w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
   <a href="https://www.linkedin.com/in/lkalves/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
   <a href="https://github.com/lkalves" target="_blank"><i class="fa fa-github w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
   <p>Feito por <a href="https://www.linkedin.com/in/lkalves/" target="_blank">Lucas</a></p>
