--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <a href="https://twitter.com/LucasDevJR" target="_blank"><i class="fa fa-twitter w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
   <a href="https://www.linkedin.com/in/lkalves/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
   <a href="https://github.com/lkalves" target="_blank"><i class="fa fa-github w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
+  <a href="mailto:developer.lucasalves@gmail.com" target="_blank"><i class="fa fa-envelope w3-hover-opacity w3-xxlarge w3-margin-right"></i></a>
   <p>Feito por <a href="https://www.linkedin.com/in/lkalves/" target="_blank">Lucas</a></p>
 </footer>
 
