--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Cursos</h2>
+        
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Banco de Dados e SQL</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><a target="_blank" href="https://www.udemy.com/certificate/UC-81da58a8-63d0-4f9d-aa78-d9b120e92eb7/">Emitido em set. de 2021</a></h6>
+          <p>Instituição: <a target="_blank" href="https://www.udemy.com/">Udemy</a></p>
+          <hr>
+        </div>
+
         <div class="w3-container">
           <h5 class="w3-opacity"><b>SQL Fundamentals</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><a target="_blank" href="https://www.sololearn.com/Certificate/1060-8580609/pdf/">Emitido em jun. de 2019</a></h6>
