--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p>Sou bacharelando em Sistemas de Informação pela Universidade Geraldo Di Biase, que fica localizada em Volta Redonda. 
-            Tenho experiência profissional em Suporte de computadores, Helpdesk e Banco de dados. 
+          <p align="justify">Sou bacharelando em Sistemas de Informação pela Universidade Geraldo Di Biase, que fica localizada em Volta Redonda. 
+            Tenho experiência profissional em Suporte de computadores, Helpdesk, Banco de dados e publicação de sistemas na AWS da Amazon. 
             Também tenho conhecimento básico em Python e atualmente venho aprendendo Kotlin.</p>
 
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Analista de TI</p>
