--- a/index.html
+++ b/index.html
@@ -82,8 +82,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Banco de Dados e SQL</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><a target="_blank" href="https://www.udemy.com/certificate/UC-81da58a8-63d0-4f9d-aa78-d9b120e92eb7/">Emitido em set. de 2021</a></h6>
-          <p>Instituição: <a target="_blank" href="https://www.udemy.com/">Udemy</a></p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><a target="_blank" href="https://certiprof.com/pages/fundamentos-na-lei-geral-de-protecao-de-dados-lgpdf?_pos=1&_sid=c6ecc31b4&_ss=r">Emitido em out. de 2021</a></h6>
+          <p>Instituição: <a target="_blank" href="https://certiprof.com/">Udemy</a></p>
+          <hr>
+        </div>
+
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Fundamentos na lei geral de proteção de dados - LGPDF</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><a target="_blank" href="https://www.udemy.com/certificate/UC-81da58a8-63d0-4f9d-aa78-d9b120e92eb7/">Emitido em set. de 2021</a>
+          <a>- Expira em out. de 2023</a>
+          </h6>
+          <p>Instituição: <a target="_blank" href="https://www.udemy.com/">Certiprof</a></p>
           <hr>
         </div>
 
